--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.6",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
     "web-vitals": "^2.1.4"
